# odo.io

./: .gitignore  Cargo.toml  odoio.paw
backend/: Cargo.toml  ClaimUser.rs  neon_RLS.sql  permissions.sql  test_vehicule.sql
backend/src/: auth.rs  handlers.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs  neon_tables.sql
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
frontend/src/: lib.rs  main.rs
frontend/src/pages/: home.rs  login.rs  signup.rs
frontend/style/: output.css
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
