[workspace]
resolver = "2"
members = [
    "backend",    # Ton API Axum
    "frontend",   # Ton app Leptos
    "common",     # Types et structs partagés
    "src-tauri",  # Configuration mobile Tauri v2
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["thierry.soulie@tsodev.fr"]
repository = "https://github.com/ton-repo/ido.io"

[workspace.dependencies]
# --- Core ---
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", features = ["macros", "postgres", "runtime-tokio-native-tls", "uuid"] }
uuid = { version = "1.7", features = ["serde", "v4"] }

# --- Backend & Database ---
axum = { version = "0.7", features = ["macros"] }
jsonwebtoken = "9.2"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# --- Frontend (Leptos) ---
leptos = { version = "0.6", features = ["nightly"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }

# --- Shared internal crates ---
common = { path = "./common" }