[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
common = { path = "../common", features = ["backend"] }
jsonwebtoken.workspace = true
dotenvy.workspace = true
tracing.workspace = true
uuid = { workspace = true }
bcrypt = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }