[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
# Framework UI
leptos = { version = "0.6", features = ["csr"] } # CSR = Client Side Rendering
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }

# Communication avec l'API Axum
gloo-net = { version = "0.5", features = ["http"] }
wasm-bindgen = "0.2"

# Nos modèles de données partagés
common = { path = "../common" }

# Dépendances héritées du workspace
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.7", features = ["serde", "v4", "js"] } # "js" est requis pour l'UUID en WASM
chrono = { workspace = true, features = ["wasmbind"] }

# Gestion du style (Optionnel mais recommandé pour charger du CSS)
stylist = { version = "0.13", features = ["macros"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
