[package]
name = "odo-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
# Le coeur de Tauri
# On garde uniquement ce qui est listé dans tes "available features"
tauri = { version = "2.0", features = ["protocol-asset", "custom-protocol"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Liaison avec tes modèles de données
common = { path = "../common" }

[build-dependencies]
# Nécessaire pour la compilation de Tauri
tauri-build = "2.0"

[features]
# Feature par défaut pour le développement
custom_protocol = ["tauri/custom-protocol"]